# Algoritmo-de-Levenshtein

./: app.py  main.py  pyproject.toml  requirements.txt
nlp_automatos/: dawg.py  downloader.py  loader.py  tokenizer.py  trie.py
tests/: test_dawg.py  test_trie.py
