[project]
name = "projeto-automatos"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson Ivanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "streamlit (>=1.53.0,<2.0.0)",
    "graphviz (>=0.21,<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
